--- a/_data/people.yml
+++ b/_data/people.yml
@@ -382,7 +382,7 @@ dreher_m:
   given_name: Matthieu
   affiliation: anl
   position: post_doc
-  topics: Programming Models
+  topics: Programming Models & In situ framework
   email: mdreher@anl.gov
   homepage: http://www.mcs.anl.gov/person/matthieu-dreher
 
